# pysync

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
pysync/: __main__.py  uv.py
tests/: pyproject.toml
