[project]
name = "pysync"
version = "0.1.19"
description = "Sync your pyproject.toml and uv lockfile"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "packaging>=24.2",
    "rich>=13.9.4",
    "typer>=0.15.2",
]

[project.scripts]
pysync = "pysync.__main__:app"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
build_command = "uv lock"  # Hack to update the lockfile after version bump
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true  # Merge imports onto a single line if their "from" is the same
known-local-folder = ["pysync", "tests"]

[tool.ruff.lint]
# Additional linting rules to enable (on top of E4, E7, E9, and F). See https://docs.astral.sh/ruff/rules/
extend-select = [
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle Error
    "I",     # isort
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "W"      # pycodestyle Warning
]
